hovereffect fix
fixing 2nd package on its hover effects not showing on the left border side

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -15,7 +15,6 @@ main {
 .package:active {
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     border-color: #ff5454;
-    border-left: 0;
 }
 
 .package a {
@@ -51,6 +50,12 @@ main {
     border-right: none;
     border-left: 4px solid #0e4f1f;
     text-align: right;
+}
+
+#free:hover,
+#fre:active {
+    border-left-color: #ff5454;
+    box-shadow: -2px 2px 4px;
 }
 
 #premium {
